--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Sarjalipputasku</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
+
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+		</div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
