--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Sarjalipputasku</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
   </head>
   <body>
